--- a/MyAPP/Formularios/Textbox.razor
+++ b/MyAPP/Formularios/Textbox.razor
@@ -1,25 +1,25 @@
-﻿@page "/Suma"
+﻿@page "/Textbox"
 
 <h3>Suma</h3>
 
 <Radzen.Blazor.RadzenStack Orientation="Radzen.Orientation.Horizontal">
     <Radzen.Blazor.RadzenStack>
         <Radzen.Blazor.RadzenLabel>Ingrese Número 1</Radzen.Blazor.RadzenLabel>
-        <Radzen.Blazor.RadzenNumeric TValue="int" @bind-Value="Numero1" class="form-control" />
+        <Radzen.Blazor.RadzenNumeric TValue="int" @bind-Value="Numero1" />
     </Radzen.Blazor.RadzenStack>
 
     <Radzen.Blazor.RadzenStack>
         <Radzen.Blazor.RadzenLabel>Ingrese Número 2</Radzen.Blazor.RadzenLabel>
-        <Radzen.Blazor.RadzenNumeric TValue="int" @bind-Value="Numero2" class="form-control" />
+        <Radzen.Blazor.RadzenNumeric TValue="int" @bind-Value="Numero2" />
     </Radzen.Blazor.RadzenStack>
 
     <Radzen.Blazor.RadzenStack>
         <Radzen.Blazor.RadzenLabel>Resultado</Radzen.Blazor.RadzenLabel>
-        <Radzen.Blazor.RadzenNumeric TValue="int" @bind-Value="Resultado" class="form-control" ReadOnly="true" />
+        <Radzen.Blazor.RadzenNumeric TValue="int" @bind-Value="Resultado" ReadOnly="true" />
     </Radzen.Blazor.RadzenStack>
 
     <Radzen.Blazor.RadzenStack>
-        <Radzen.Blazor.RadzenButton Text="Sumar" Click="Sumar" Style="margin-top:40px"/>
+        <Radzen.Blazor.RadzenButton ButtonStyle="Radzen.ButtonStyle.Dark" Text="Sumar" Click="Sumar" Style="margin-top:40px"/>
     </Radzen.Blazor.RadzenStack>
 </Radzen.Blazor.RadzenStack>
 
