agregando entity framework

--- a/MyAPP/Components/Layout/NavMenu.razor
+++ b/MyAPP/Components/Layout/NavMenu.razor
@@ -9,10 +9,12 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
         <RadzenPanelMenu>
-            <RadzenPanelMenuItem Text="Inicio" Path="home" Icon="home" />
+            <RadzenPanelMenuItem Text="Inicio" Path="/" Icon="home" />
             <RadzenPanelMenuItem Text="Catalogos" Icon="Settings">
                 <RadzenPanelMenuItem Text="Textbox" Path="Textbox" Icon="Text_Fields" />
                 <RadzenPanelMenuItem Text="DropDown" Path="Dropdown" Icon="Arrow_Drop_Down" />
+                <RadzenPanelMenuItem Text="ListBox" Path="Perro" Icon="Pets" />
+                <RadzenPanelMenuItem Text="Data Grid" Path="GridData" Icon="Bolt" />
 
             </RadzenPanelMenuItem>
         </RadzenPanelMenu>
